Sugati/src/objects/Continent__c.object
<CustomObject>
    <description>A list of the regions - continents?</description>
    <fields>
        <fullName>R_Client_Notes__c</fullName>
        <label>Client Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>R_Our_Opinion__c</fullName>
        <label>Our Opinion</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>R_Quote__c</fullName>
        <label>Quote</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>R_Region_Code__c</fullName>
        <label>Region Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Sales_Tips__c</fullName>
        <label>Sales Tips</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Continent</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>R_Region_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Continent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Continents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>